# zhihuDecrypt

./: .gitignore  README.md  __init__.py  consts.py  example.py  learn.py  main.py  pyproject.toml  utils.py  words.txt
dicts/: charset.txt
zhihudecrypt/: __init__.py  consts.py  learn.py  utils.py  words.txt
zhihudecrypt/dicts/: 30_font_1.txt  30_font_10.txt  30_font_11.txt  30_font_12.txt  30_font_13.txt  30_font_14.txt  30_font_15.txt  30_font_16.txt  30_font_17.txt  30_font_18.txt  30_font_19.txt  30_font_2.txt  30_font_20.txt  30_font_3.txt  30_font_4.txt  30_font_5.txt  30_font_6.txt  30_font_7.txt  30_font_8.txt  30_font_9.txt  50_1.txt  50_2.txt  df_30_font_1.txt  df_30_font_2.txt
